added new feature : show previously selected date when reopen the calendar.

--- a/src/calendar/calendar.component.html
+++ b/src/calendar/calendar.component.html
@@ -4,7 +4,7 @@
       <span class="icon-left"></span>
     </div>
     <div class="month">
-      {{niceMonth(current)}}
+      {{findMonth(current)}}
     </div>
     <div class="right" (click)="nextMonth()">
       <span class="icon-right"></span>
